# nanodet_volleyball

./: .gitignore  CMakeLists.txt  nanodet_openvino  run.sh
include/: Nanodet.h
src/: Nanodet.cpp  main.cpp
test/: main_onnx.py  main_openvion.py  nanodet-plus-m-1.5x_416.yml  nanodet_IR.xml
